[package]
name = "ability_cash_importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"

encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"

rust_decimal = "1.26"
rust_decimal_macros = "1.26"

chrono = "0.4"

xml-rs = "0.8"
